Added report 250624